# rust_wasm_experiments

./: .gitignore  Cargo.toml  build.sh  readme.md
no_deps/: build.sh
src/: lib.rs
static/: index.html
use_bevy/: Cargo.toml  build.sh
use_bevy/static/: index.html
use_bindgen/: Cargo.toml  build.sh
use_bindgen/src/: lib.rs
